tests/src/frontend/typechecking/invalid/bad_default_value_fun.sk
mutable base class P {
  children =
  | L()
  | R()
}

fun no1{x: L = R()}: void {
  void
}
fun no2{x: mutable L = L()}: void {
  void
}
